--- a/views/findfriends.html
+++ b/views/findfriends.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" ng-app="picktimeApp" ng-controller="usersCtrl">
 
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
@@ -45,7 +45,7 @@
         <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search for..." aria-label="Search"
-                    aria-describedby="basic-addon2">
+                    aria-describedby="basic-addon2" data-ng-model="searchBox">
                 <div class="input-group-append">
                     <button class="btn btn-primary" type="button">
                         <i class="fas fa-search"></i>
@@ -156,49 +156,34 @@
             </li>
             
         </ul>
-        <div id="content-wrapper" ng-app="picktimeApp" ng-controller="usersCtrl">
-            <div class="card mb-3">
-                <div class="card-header">
-                    <i class="fas fa-user"></i> Tabla de Usuarios</div>
-                <div class="card-body">
-                    <div class="card mb-3">
+        <div id="content-wrapper" >
                         <div class="card-header">
                             <i class="fas fa-table"></i>
                             Lista de Usuarios</div>
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead>
-                                        <tr>
-                                            <th>Nombre </th>
-                                            <th>Apellido</th>
-                                            <th></th>
-                                        </tr>
-                                    </thead>
-                                    <tfoot>
-                                        <tr>
-                                            <th>Nombre </th>
-                                            <th>Apellido</th>
-                                            <th></th>
-                                        </tr>
-                                    </tfoot>
-                                    <tbody>
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td style="text-align:center;" ><button class="button" id="goButton" onclick="goButton();">Ver Muro</button></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-
+            <div class="card mb-3">
+                      <div class="card-body" >
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <thead>
+                                <tr>
+                                    <th>Nombre</th>
+                                    <th>Apellido</th>
+                                    <th>Acciones</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                    <tr ng-repeat="x in users | filter:searchBox">
+                                            <td>{{ x.name}}</td>
+                                            <td>{{ x.lastName}}</td>
+                                            <td>
+                                                <button type="button" class="btn btn-primary btn-lg" alt="Ir a muro" data-ng-click="goToWall(x.id)"><i class="fas fa-portrait"></i></i></i></button> </td>
+                                          </tr>
+                            </tbody>
+                           
+                        </table>
+                       
                 </div>
-
             </div>
         </div>
-    </div>
 
     <!-- Bootstrap core JavaScript-->
     <script src="../vendor/jquery/jquery.min.js"></script>
@@ -209,10 +194,11 @@
 
     <!-- Custom scripts for all pages-->
     <script src="../js/sb-admin.min.js"></script>
+    
+    <!--JS script-->
+    <script src="../js/findfriends.js"></script>
 
-    <script src="../vendor/datatables/jquery.dataTables.js"></script>
-    <script src="../vendor/datatables/dataTables.bootstrap4.js"></script>
-    <script src="../js/demo/datatables-demo.js"></script>
+
 
 
 
