--- a/views/news.html
+++ b/views/news.html
@@ -152,7 +152,7 @@
                 </a>
             </li>
         </ul>
-        <div id="content-wrapper" ng-app="picktimeApp" ng-controller="usersCtrl">
+        <div id="content-wrapper" ng-app="picktimeApp" ng-controller="newsCtrl">
             <div class="card mb-3">
                 <div class="card-header">
                     <i class="fas fa-newspaper"></i> Novedades </div>
@@ -163,18 +163,17 @@
                     </h1>
 
                     <!-- Project One -->
-                    <div class="row">
+                    <div class="row" data-ng-repeat="foto in fotoComentarios">
                         <div class="col-md-7">
+                            <span>{{foto.name}}</span>
                             <a href="#">
-                                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                                <img class="img-fluid rounded mb-3 mb-md-0" src="{{foto.photo}}}" alt="">
                             </a>
                         </div>
                         <div class="col-md-5">
-                            <h3>Project One</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam
-                                exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo
-                                deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-                            <a class="btn btn-primary" href="#">View Project</a>
+                         <!--   <h3>Project One</h3>  -->
+                            <p>{{foto.comentario}}</p>
+                            <a class="btn btn-primary" href="#">Ver más</a>
                         </div>
                     </div>
                     <!-- /.row -->
@@ -193,7 +192,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="../js/sb-admin.min.js"></script>
-
+    <script src="../js/news.js"></script>
 
 
 </body>
